--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,15 +21,15 @@
                     <a href="#">Flux Capacitor</a>
                 </div>
                 <div class="upgrade">
-                    <img src="/images/flame.JPG" alt="Flame Decals">
+                    <img src="/images/upgrades/flame.png" alt="Flame Decals">
                     <a href="#">Flame Decals</a>
                 </div>
                 <div class="upgrade">
-                    <img src="/images/bumper_sticker.JPG" alt="Bumper Stickers">
+                    <img src="/images/upgrades/bumper_sticker.png" alt="Bumper Stickers">
                     <a href="#">Bumper Stickers</a>
                 </div>
                 <div class="upgrade">
-                    <img src="/images/hub-cap.JPG" alt="Hub Caps">
+                    <img src="/images/upgrades/hub-cap.png" alt="Hub Caps">
                     <a href="#">Hub Caps</a>
                 </div>
             </div>
