--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
                 <li>Fuzzy dice!</li>
             </ul>
             <button>Own Today</button>
-            <img src="/images/vehicles/delorean.JPG" alt="DMC Delorean">
+            <img src="/images/vehicles/delorean.png" alt="DMC Delorean">
         </section>
         <section class="delorean-upgrades">
             <h2>Delorean Upgrades</h2>
