--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,25 +11,25 @@
                 <li>Fuzzy dice!</li>
             </ul>
             <button>Own Today</button>
-            <img src="/images/delorean.JPG" alt="DMC Delorean">
+            <img src="/images/vehicles/delorean.png" alt="DMC Delorean">
         </section>
         <section class="delorean-upgrades">
             <h2>Delorean Upgrades</h2>
             <div class="upgrades">
                 <div class="upgrade">
-                    <img src="/images/flux-cap.png" alt="Flux Capacitor">
+                    <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor">
                     <a href="#">Flux Capacitor</a>
                 </div>
                 <div class="upgrade">
-                    <img src="/images/flame.JPG" alt="Flame Decals">
+                    <img src="/images/upgrades/flame.png" alt="Flame Decals">
                     <a href="#">Flame Decals</a>
                 </div>
                 <div class="upgrade">
-                    <img src="/images/bumper_sticker.JPG" alt="Bumper Stickers">
+                    <img src="/images/upgrades/bumper_sticker.png" alt="Bumper Stickers">
                     <a href="#">Bumper Stickers</a>
                 </div>
                 <div class="upgrade">
-                    <img src="/images/hub-cap.JPG" alt="Hub Caps">
+                    <img src="/images/upgrades/hub-cap.png" alt="Hub Caps">
                     <a href="#">Hub Caps</a>
                 </div>
             </div>
