--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,47 +2,47 @@
     <%- include('partials/header') %>
     
     <main>
-        <section class="hero">
-            <h1>Welcome to CSE Motors!</h1>
-            <h2>DMC Delorean</h2>
-            <ul>
-                <li>3 Cup holders</li>
-                <li>Superman doors</li>
-                <li>Fuzzy dice!</li>
-            </ul>
-            <button>Own Today</button>
-            <img src="/images/vehicles/delorean.png" alt="DMC Delorean">
-        </section>
-        <section class="delorean-upgrades">
-            <h2>Delorean Upgrades</h2>
-            <div class="upgrades">
-                <div class="upgrade">
-                    <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor">
-                    <a href="#">Flux Capacitor</a>
-                </div>
-                <div class="upgrade">
-                    <img src="/images/upgrades/flame.png" alt="Flame Decals">
-                    <a href="#">Flame Decals</a>
-                </div>
-                <div class="upgrade">
-                    <img src="/images/upgrades/bumper_sticker.png" alt="Bumper Stickers">
-                    <a href="#">Bumper Stickers</a>
-                </div>
-                <div class="upgrade">
-                    <img src="/images/upgrades/hub-cap.png" alt="Hub Caps">
-                    <a href="#">Hub Caps</a>
+        <section class="welcome">
+            <h2>Welcome to CSE Motors!</h2>
+            <div class="delorean-promo">
+                <img src="/images/vehicles/delorean.png" alt="DMC Delorean">
+                <div class="promo-text">
+                    <h3>DMC Delorean</h3>
+                    <p>3 Cup holders<br>Superman doors<br>Fuzzy dice!</p>
+                    <button>Own Today</button>
                 </div>
             </div>
         </section>
-        <section class="delorean-reviews">
-            <h2>DMC Delorean Reviews</h2>
-            <ul>
-                <li>"So fast it's almost like traveling in time." (4/5)</li>
-                <li>"Coolest ride on the road." (4/5)</li>
-                <li>"I'm feeling McFly!" (5/5)</li>
-                <li>"The most futuristic ride of our day." (4/5)</li>
-                <li>"80's livin and I love it!" (5/5)</li>
-            </ul>
+        <section class="upgrades-reviews">
+            <div class="upgrades">
+                <h3>Delorean Upgrades</h3>
+                <div class="upgrade-item">
+                    <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor">
+                    <p>Flux Capacitor</p>
+                </div>
+                <div class="upgrade-item">
+                    <img src="/images/upgrades/flame.png" alt="Flame Decals">
+                    <p>Flame Decals</p>
+                </div>
+                <div class="upgrade-item">
+                    <img src="/images/upgrades/bumper_sticker.png" alt="Bumper Stickers">
+                    <p>Bumper Stickers</p>
+                </div>
+                <div class="upgrade-item">
+                    <img src="/images/upgrades/hub-cap.png" alt="Hub Caps">
+                    <p>Hub Caps</p>
+                </div>
+            </div>
+            <div class="reviews">
+                <h3>DMC Delorean Reviews</h3>
+                <ul>
+                    <li>“So fast it’s almost like traveling in time.” (4/5)</li>
+                    <li>“Coolest ride on the road.” (4/5)</li>
+                    <li>“I’m feeling McFly!” (5/5)</li>
+                    <li>“The most futuristic ride of our day.” (4/5)</li>
+                    <li>“80’s livin and I love it!” (5/5)</li>
+                </ul>
+            </div>
         </section>
     </main>
     <%- include('partials/footer') %>
