--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,14 +1,13 @@
 <header>
-  <h1>CSE Motors</h1>
-
-  <a href="#" class="account">My Account</a>
+  <div class="header-top">
+      <h1>CSE Motors</h1>
+      <a href="#" class="account">My Account</a>
+  </div>
   <nav>
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Custom</a></li>
-        <li><a href="#">Sedan</a></li>
-        <li><a href="#">SUV</a></li>
-        <li><a href="#">Truck</a></li>
-    </ul>
+      <a href="#">Home</a>
+      <a href="#">Custom</a>
+      <a href="#">Sedan</a>
+      <a href="#">SUV</a>
+      <a href="#">Truck</a>
   </nav>
 </header>
