--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,5 @@
+<!-- views/partials/footer.ejs -->
 <footer>
-    <p>&copy; 2023, CSE 340 App</p>
+    <p>&copy; 2024 Car Inventory</p>
+    <a href="/trigger-error">Trigger Error</a>
 </footer>
