--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,10 +4,10 @@
       <a href="#" class="account">My Account</a>
   </div>
   <nav>
-      <a href="#">Home</a>
-      <a href="#">Custom</a>
-      <a href="#">Sedan</a>
-      <a href="#">SUV</a>
-      <a href="#">Truck</a>
+    <a href="/inventory/home">Home</a>
+    <a href="/inventory/custom">Custom</a>
+    <a href="/inventory/sedan">Sedan</a>
+    <a href="/inventory/suv">SUV</a>
+    <a href="/inventory/truck">Truck</a>
   </nav>
 </header>
