--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,8 @@
+<!-- views/partials/nav.ejs -->
 <nav>
-  <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Custom</a></li>
-      <li><a href="#">Sedan</a></li>
-      <li><a href="#">SUV</a></li>
-      <li><a href="#">Truck</a></li>
-  </ul>
+  <a href="/inventory/home">Home</a>
+  <a href="/inventory/custom">Custom</a>
+  <a href="/inventory/sedan">Sedan</a>
+  <a href="/inventory/suv">SUV</a>
+  <a href="/inventory/truck">Truck</a>
 </nav>
